feat: add patch_id to timer sync and bank memory sync support
Send varbit-based patch_id for farming patches so the backend can
distinguish multiple patches in the same region (e.g. Farming Guild
fruit tree vs celastrus). Also adds bank memory sync scaffolding.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>