@@ -43,6 +43,45 @@ Then build:
 
 The `update.js` script copies `farming/` and `hunter/` from RuneLite and patches package names/visibility. See [runelite-time-tracking-reminder](https://github.com/queicherius/runelite-time-tracking-reminder) for the pattern.
 
+## Distribution (sending the plugin to someone else)
+
+You can package the plugin in two ways:
+
+### Option 1: Single runnable JAR (easiest for the recipient)
+
+Build a fat JAR that includes RuneLite and the plugin. The recipient only needs Java 11+ installed; they do not need to install RuneLite separately.
+
+```bash
+./gradlew shadowJar
+```
+
+Send them the file **`build/libs/mystix-plugin-1.0-SNAPSHOT-all.jar`**. They run (on macOS the `--add-exports` flag is required for the client to use Apple’s window APIs):
+
+```bash
+java -ea --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED -jar mystix-plugin-1.0-SNAPSHOT-all.jar
+```
+
+For Jagex accounts you may need developer mode:  
+`java -ea --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED -jar mystix-plugin-1.0-SNAPSHOT-all.jar --developer-mode`
+
+### Option 2: Plugin JAR for sideloading (if they already use RuneLite)
+
+Build the plugin-only JAR (this is produced by `./gradlew build`):
+
+```bash
+./gradlew build
+```
+
+Send them **`build/libs/mystix-plugin-1.0-SNAPSHOT.jar`** (the one *without* `-all`). They then:
+
+1. Install and open RuneLite normally.
+2. Enable developer mode: **Configuration** → **Developer tools** → enable **Developer mode**, or run RuneLite with `--developer-mode`.
+3. Put the JAR in RuneLite’s sideloaded-plugins folder:
+   - **macOS**: `~/Library/Application Support/RuneLite/sideloaded-plugins/`
+   - **Windows**: `%USERPROFILE%\.runelite\sideloaded-plugins\`
+   - **Linux**: `~/.runelite/sideloaded-plugins/`
+4. Restart RuneLite. Mystix will appear in the plugin list.
+
 ## Running Locally
 
 ```bash
